tests/reject/vtMutateVtReturn.emojic
🕊 🌼 🍇
  🖍🆕 text 🔡

  🆕 🍼 text 🔡 🍇🍉

  🖍❗️ 😣 🍇
    🔤Rabzmw🔤 ➡️ 🖍text
  🍉

  🐇❗️💚 ➡️ 🌼 🍇
    ↩️ 🆕🌼 🔤Gumutzr🔤❗️
  🍉
🍉

🏁 🍇
  😣💚🕊🌼❗️❗️
🍉
